--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
     <main>
         <section id="login">
             <div id="imagem">
-                Foto
+                <!--aqui vai a imagem CSS-->
             </div>
 
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer mais configurações no seu ambiente</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post">
+                    <label for="bloco1">G-mail:</label>
+                    <input type="text" name="ibloco1" id="bloco1">
+                    <label for="bloco2">Senha:</label>
+                    <input type="password" name="ibloco2" id="bloco2">
+                </form>
             </div>
         </section>
     </main>
