--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaQuery.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <main>
@@ -18,11 +19,26 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e fazer mais configurações no seu ambiente</p>
-                <form action="login.php" method="post">
-                    <label for="bloco1">G-mail:</label>
-                    <input type="text" name="ibloco1" id="bloco1">
-                    <label for="bloco2">Senha:</label>
-                    <input type="password" name="ibloco2" id="bloco2">
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            person
+                        </span>
+                        <input type="email" name="login" id="ilogin" placeholder="Seu e-mail" autocomplete="email" required max="8"> 
+                        <label for="ilogin">G-mail</label>
+                    </div>
+
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            key
+                        </span>
+                        <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required maxlength="30">
+                        <label for="isenha">Senha</label>
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">esqueci a senha 
+                        <span class="material-symbols-outlined">mail</span></a>
+                    
                 </form>
             </div>
         </section>
